# FileSeeker

./: Cargo.toml  README.md  config.json
fs-cli/: Cargo.toml
fs-cli/src/: main.rs
fs-core/: Cargo.toml
fs-core/src/: directory_scanner.rs  file_analyzer.rs  lib.rs
fs-gui/: package.json  pnpm-lock.yaml
fs-gui/src/: App.tsx  typings.ts
fs-gui/src-tauri/: Cargo.toml  tauri.conf.json
fs-gui/src-tauri/src/: main.rs
fs-gui/src/components/: ActionBar.tsx  AnalysisDataTable.tsx  FilePathInput.tsx  index.ts
src/: config.rs  directory_scanner.rs  file_analyzer.rs  main.rs
src/utils/: path.rs
