[package]
name = "file_seeker"
description = "A CLI application for analyzing directories and files."
version = "0.1.0"
edition = "2021"

[dependencies]
fs-core = { path = "../fs-core" }
clap = { version = "4.5.11", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
