[package]
name = "fs-gui"
version = "0.0.0"
description = "A GUI App for FileSeeker"
authors = ["suzuki3jp"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-open", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs-core = { path = "../../fs-core" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
